style.css
/* FONTS */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@font-face {
    font-family: "London-Underground";
    src: url("assets/london-underground-regular.ttf");
}


/* DEFAULT ELEMENTS */

body {
    background-color: #141414;
    margin: 0;
}

main {
    margin: 0 31.25vw 200px;
    padding-top: 300px;
}

::selection {
    background: #2c2c2c;
}

h1 {
    font-family: "London-Underground", "serif";
    font-size: 1rem;

    color: #2F2F2F;

    padding-top: 200px;
    margin-bottom: 80px;
}

h2 {
    font-family: "Inter", "sans-serif";
    font-weight: 500;
    font-size: 1rem;
}

h3 {
    font-family: "London-Underground", "serif";
    font-size: 0.75rem;
    letter-spacing: 0.15rem;
}

a {
    color: #999999;
    text-decoration: none;
}

p {
    font-family: "Inter", "sans-serif";
    font-weight: 400;
    font-size: 1rem;
    color: #DDDDDD;
}

.section {
    display: block;
    overflow: hidden;

    padding-top: 200px;
}

.section-head {
    letter-spacing: 30px;
    transition: all 1.3s;
}


/* On-Load Effects */

.main {
    opacity: 0;
    transition: all 1s;
}

.main #name .hero-title {
    line-height: 11rem;
    transition: all 1s;
}

.main.after {opacity: 1;}

.main.after #name .hero-title {
    line-height: 10rem;
}


/* NAV SECTION */

nav {
    display: flex;
    width: 100vw;
    position: fixed;
    gap: 45px;

    padding-top: 1vh;
    padding-bottom: 4vh;
    padding-left: 2rem;

    background-image: linear-gradient(rgba(20, 20, 20, 1.0), rgba(20, 20, 20, 0.0));
    z-index: 1000;
}

.nav-link {
    text-decoration: none;
    color: white;
    opacity: 15%;

    transition: all 0.5s
}

.nav-link:hover {opacity: 100%}

.nav-link.active {opacity: 100%}


/* HERO SECTION */

.hero-title {
    padding: 0;
    margin:0;

    text-align: left;
    color: white;
    letter-spacing: 7vw;
    line-height: 10rem;
}

.dot {
    color: #141414;
    letter-spacing: 8vw;
    text-align: center;
    line-height: 6rem;

    transform: translate(3.3vw, -4rem);
}

.fading-dot {
    padding: 0;
    margin-right: 1vw;
    transform: translateY(3px);

    color: white;
    opacity: 0.2;

    line-height: 8rem;
}

#name {
    display: block;
    gap: 1rem;
    width: 25vw;
    height: 500px;

    padding-top: 0;
    margin: 0 auto 10rem auto;

    transition: all 0.7s;
}

#name:hover {width: 28vw;}


/* EXPERIENCE SECTION */

.timeline-holder {
    display: flex;
    justify-content: center;
    gap: 4rem;

    margin-left: auto;
    margin-right: auto;
}

.line {
    width: 1px;
    height: 200px;
    background-color: #2F2F2F;

    margin-left: auto;
    margin-right: auto;
}

.timeline-dot {
    width: 5px;
    height: 5px;
    background-color: #2F2F2F;
    border-radius: 50%;

    margin: 10px auto;
}

.timeline-block {width: 12rem;}

.timeline-text {
    height: 160px;
    margin-bottom: 65px;
    transition: all 0.3s;
}

.timeline-text:hover {
    transform: translateY(-10px);
    z-index: 10;
}

.timeline-space {height: 215px;}


/* PROJECTS SECTION */

.card-holder {
    width: 100%;
    display: flex;
    flex-wrap: nowrap;
    gap: 10px;
    overflow-x: auto;
    scrollbar-width: none;
}

.card {
    width: 175px;
    height: 175px;
    transition: all 0.3s;

}

.row {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: 175px;
}

.card:hover{
    transform: translateY(-10px);
    z-index: 10;
}

.card-title {
    color: #dddddd;
    padding-bottom: 1rem;
}

.card-description {
    font-weight: 400;
    color: #999999;
}


/* ABOUT SECTION */

.socials {
    display: flex;
    gap: 1.5vw;

    margin-top: 3rem;
}

.social-text {
    color: #999999;
    transition: all 0.7s;
}

.social-text:hover {color: white;}


/* SCROLLBAR */

::-webkit-scrollbar {width: 7px;}

::-webkit-scrollbar-track {background: #141414;}

::-webkit-scrollbar-thumb {
    background: #2c2c2c;
    border-radius: 5px;
    z-index:1;
}

::-webkit-scrollbar-thumb:hover {background: #3d3d3d;}

.card-holder::-webkit-scrollbar {width: 7px !important;}

.card-holder::-webkit-scrollbar-track {background: #141414;}

.card-holder::-webkit-scrollbar-thumb {
    background: #2c2c2c;
    border-radius: 5px;
}

.card-holder::-webkit-scrollbar-thumb:hover {background: #3d3d3d;}


@media (max-width: 1300px) {
    main {margin: 0 20vw 200px;}

    .card-holder {gap: 3vw;}

    .socials {gap: 3vw;}

    #name {width: 30vw;}

    #name:hover {width: 30vw;}
}


@media (max-width: 800px) and (orientation: portrait) {
    main {
        margin: 0 7vw 200px;
        padding-top: 250px;
    }

    nav {display: none;}

    .timeline-holder {gap: 3rem;}

    .card-holder {gap: 3vw;}

    .section-head {letter-spacing: 5vw;}

    .socials {gap: 3vw;}

    .hero-title {letter-spacing: 12vw;}

    #name {
        transform:translateX(3px);
        gap: 1rem;
        width: 50vw;
    }

    /* Disabling all hover effects for mobile */

    #name:hover {transform:translateX(3px)}

    #name:hover {width: 50vw;}

    .nav-link:hover {opacity: 100%}

    .timeline-text:hover {transform: translateY(0);}

    .card:hover{transform: translateY(0);}

    .social-text:hover {
        color: #999999;
    }
}

